@@ -1,8 +1,8 @@
 <tal:block tal:condition="view/check_display_condition">
 <script type="text/javascript" tal:content="view/settings_javascript"></script>
 <script type="text/javascript">
-        $(document).ready(function() {
-            $(".oembed").oembed(null,jqueryOmebedSettings);
-        });
+$(document).ready(function() {
+    $(".oembed").oembed(null,jqueryOmebedSettings);
+});
 </script>
 </tal:block>
